--- a/src/components/app.module.scss
+++ b/src/components/app.module.scss
@@ -5,3 +5,41 @@
   align-items: center;
   height: 100vh;
 }
+
+.Authenticated_App {
+  display: flex;
+  justify-content: center;
+  margin : 10px 20px 0 20px;
+}
+
+.Sidebar {
+  border: 1px solid rgba(0,0,0,.1);
+  padding: 10px;
+  border-radius: 2px;
+
+  ul {
+    list-style: none;
+    padding: 0;
+
+    li , a{
+      padding: 5px 5px 10px 5px;
+      text-decoration: none;
+      font-weight: 410;
+      color: #606060;
+      border-radius: 3px;
+
+      &:hover {
+        background: #f1f1f4;
+        color : #3f51b5;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.header {
+  width: 100%;
+  height: 50px;
+  text-align: right;
+  padding: 10px 15px 0 0 ;
+}
